<resources>
    <string name="app_name">Капитан</string>
    <string name="message">Сообщения</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="customer_password">Пароль</string>
    <string name="customer_email">email</string>
    <string name="autologin">Автовход</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрировать аккаунт</string>
    <string name="preferred_username">username</string>
    <string name="preferred_password">password</string>
    <string name="check_email">Проверьте почту</string>
    <string name="customer_saving">Сохранение пользователя</string>
    <string name="customer_creating">Создание пользователя</string>
    <string name="transport_saving">Сохранение транспорта</string>
    <string name="transport_loading">Загрузка транспорта</string>
    <string name="customer_loading">Загрузка пользователя</string>
    <string name="wrong_credentials">Вход запрещён</string>
    <string name="boolean_property_value_yes">Да</string>
    <string name="boolean_property_value_no">Нет</string>
    <string name="events_loading">Загрузка событий</string>
    <string name="customer_phone">Телефон</string>
    <string name="customer_fio">Имя</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="map">Карта</string>
    <string name="wrong_data_entered">Неправильное значение</string>
    <string name="toOrder">Заказать</string>
    <string name="error">Ошибка</string>
    <string name="orders_loading">Загрузка заказов</string>
    <string name="image">Фотографий</string>
    <string name="customer">Персонал</string>
    <string name="parking_loading">Загрузка стоянок</string>
    <string name="request">Выполнение запроса</string>
    <string name="requests">Заявки</string>
    <string name="calendar_loading">Загрузка событий</string>
    <string name="noOrder">Отгул</string>
    <string name="calendar_begin">Время начала</string>
    <string name="calendar_end">Время окончания</string>
    <string name="google_maps_key">AIzaSyAKCUA63kOoU-N0mdmnJFLXOicjM4zvGxM</string>
    <string name="order_creating">Создание заказа</string>
    <string name="event_creating">Создание отгула</string>
    <string name="forbidden">Запрещено</string>
    <string name="transport">Транспорт</string>
    <string name="orders">Заказы</string>
    <string name="calendar">Календарь</string>
    <string name="account">Профиль</string>
    <string name="actionPrompt">Выбор</string>
    <string name="lbl_amount">Сумма</string>
    <string name="lbl_email">email</string>
    <string name="payment">Оплатить</string>
</resources>
