<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/transport_menu"
        android:enabled="true"
        android:icon="@drawable/icon_transport"
        android:title="@string/transport" />

    <item
        android:id="@+id/request_menu"
        android:enabled="true"
        android:icon="@drawable/icon_request"
        android:title="@string/requests" />

    <item
        android:id="@+id/orders_menu"
        android:enabled="true"
        android:icon="@drawable/icon_order"
        android:title="@string/orders" />

    <item
        android:id="@+id/calendar_menu"
        android:enabled="true"
        android:icon="@drawable/icon_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/account_menu"
        android:enabled="true"
        android:icon="@drawable/icon_user"
        android:title="@string/account" />
</menu>